--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,3 +1,4 @@
+/* Copied from assets/css/style.scss to satisfy Jekyll import */
 /* Overlapping background images for horizontal blend */
 .bg-left,
 .bg-right {
