--- a/style.css
+++ b/style.css
@@ -117,6 +117,9 @@ main {
 
 h1 {
     font-size: 2.5em;
+    @media screen and (max-width: 600px) {
+        font-size: 1.5em;
+    }
     margin: 1em auto 1em;
 }
 
@@ -137,6 +140,10 @@ h1 {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
 }
 h2 {
+    @media screen {
+        font-size: 1.1em;
+        line-height: 1.7;
+    }
     color: #63B4D1;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
