--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ main {
     /* for Safari */
     border: 1px solid rgba(255, 255, 255, 0.18);
     padding: 2rem;
-    color: #fff;
+    /* color: #fff; */
+    color: #212738;
     text-align: center;
     margin: auto;
     font-family: 'Arial', sans-serif;
@@ -105,6 +106,7 @@ main {
 
 .purple-card {
     background: rgba(128, 0, 128, 0.15);
+    color: black;
 }
 
 .red-card {
@@ -120,6 +122,9 @@ h1 {
     @media screen and (max-width: 600px) {
         font-size: 1.5em;
     }
+    @media screen and (max-width: 360px) {
+        font-size: 1em;
+    }
     margin: 1em auto 1em;
 }
 
@@ -132,8 +137,9 @@ h2,
 h3,
 h4 {
     font-family: 'Press Start 2P', cursive;
-    color: #fff;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    /* color: #fff; */
+    color: #444;
+    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); */
 }
 h1 {
     color: #212738;
@@ -141,11 +147,14 @@ h1 {
 }
 h2 {
     @media screen {
-        font-size: 1.1em;
-        line-height: 1.7;
+        font-size: 1.3em;
+    }
+    @media screen and (max-width: 360px) {
+        font-size: 1em;
+
     }
     color: #63B4D1;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    /* text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); */
 }
 h1,
 h2,
