--- a/style.css
+++ b/style.css
@@ -1,31 +1,3 @@
-/* Copied from assets/css/style.scss to satisfy Jekyll import */
-/* Overlapping background images for horizontal blend */
-.bg-left,
-.bg-right {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 60vw;
-    object-fit: cover;
-    z-index: 0;
-    pointer-events: none;
-}
-
-.bg-right {
-    left: auto;
-    right: 0;
-}
-
-.bg-left {
-    -webkit-mask-image: linear-gradient(to right, black 70%, transparent 100%);
-    mask-image: linear-gradient(to right, black 70%, transparent 100%);
-}
-
-.bg-right {
-    -webkit-mask-image: linear-gradient(to left, black 70%, transparent 100%);
-    mask-image: linear-gradient(to left, black 70%, transparent 100%);
-}
 
 body,
 html {
@@ -143,7 +115,7 @@ h4 {
 }
 h1 {
     color: #212738;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+    /* text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6); */
 }
 h2 {
     @media screen {
@@ -204,4 +176,26 @@ header.white-card h1,
 header.white-card h2 {
     position: relative;
     z-index: 1;
+}
+
+.mailing-list-button {
+    background-color: #63B4D1;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+    margin: auto;
+    width: fit-content;
+    display: block;
+    padding: 10px 20px;
+}
+.center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 4em;
+    margin-top: 4em
 }
